    (See #739593.)
  * pg_ctlcluster: Add status action, add --foreground option, accept dash
    (and slash) between version and cluster.
  * Add systemd unit files (WIP, not yet installed).
  * postgresql-client: Wrap pg_recvlogical, introduced in 9.4.
  * t/050_encodings.t: 9.4 emits COPY command tags, suppress with psql -q.
  * postgresql: Add Suggests: postgresql-doc. (Closes: #743755)

 -- Christoph Berg <christoph.berg@credativ.de>  Mon, 24 Mar 2014 10:34:08 +0100

postgresql-common (154) unstable; urgency=medium

  [ Martin Pitt ]
  * debian/postgresql-common.preinst: Drop obsolete upgrade migration.
  * debian/maintscripts-functions, _link_manpages(): The move of pg_basebackup
    from server to client still affects upgrades from -9.1 to -9.3. Place the
    upgrade fix here instead of postgresql-9.1.preinst (which does not exist
    any more now). (LP: #1270597)
  * Update Vcs-Bzr:, bzr.d.o. does not work any more.

  [ Christoph Berg ]
  * t/031_errors_disk_full.t: Drop cluster after tests.
  * testsuite: Always umount the tmpfs overlays.

 -- Christoph Berg <myon@debian.org>  Fri, 21 Feb 2014 08:18:46 +0100

postgresql-common (153) unstable; urgency=medium

  [ Christoph Berg ]
  * Replace the static logrotate configuration by generating the file
    dynamically using ucf, triggered by watching /usr/sbin/logrotate.
    This eases dist-upgrades that upgrade logrotate to >= 3.8 from an older
    version (squeeze->wheezy, precise->trusty).
  * postgresql-common.postinst: Stop debconf later so ucf can use it.
  * postgresql-common.postinst: Call su without - to avoid a warning.
  * t/003_package_checks.t: Add test case for logrotate.
  * pg_createcluster, t/001_packages.t: Refactor the ssl cert test, and add
    matching testcases in the testsuite.
  * t/020_create_sql_remove.t: Make pipe writes unbuffered.
  * pg_buildext: Document the loop action (present since version 141).
  * pg_buildext: Add "installcheck" action for use with autopkgtest.