@@ -1,3 +1,4 @@
+pg_conftool.1
 pg_lsclusters.1
 pg_virtualenv.1
 *.8
